--- a/src/components/Widgets.css
+++ b/src/components/Widgets.css
@@ -1,6 +1,13 @@
 .widgets {
     flex: 0.3;
   }
+  @media only screen and (max-width: 568px) {
+    .widgets {
+      display: none;
+      height: 100%;
+    }
+
+  }
   
   .widgets__input {
     display: flex;
