--- a/src/components/TweetBox.css
+++ b/src/components/TweetBox.css
@@ -18,6 +18,13 @@
     font-size: 20px;
     border: none;
  }
+ @media only screen and (max-width: 568px) {
+   .tweetBox__input > input {
+      width: 80%;
+      margin-left: auto;
+      margin-right: auto;
+   }
+ }
  .tweetBox__tweetButton {
     background-color: var(--twitter-color) !important;
     border: none !important;
@@ -25,7 +32,7 @@
     font-weight: 900 !important;
     text-transform: inherit !important;
     border-radius: 30px !important;
-    width: 80px;
+    width: 70px;
     height: 40px !important;
     margin-top: 20px !important;
     margin-left: auto !important;
